# openrocq

./: COGNITIVE_ENGINE_SUMMARY.md  README.md  ROADMAP.md  cognitive_demo.ml
dev/: README.md
dev/doc/: DEVELOPMENT_GUIDE.md
plugins/cognitiveengine/: README.md  cognitiveengine.ml  cognitiveengine.mli  dune  ecan.ml  ecan.mli  g_cognitiveengine.mlg  g_cognitiveengine.mlg.bak  g_cognitiveengine.mli  hypergraph.ml  hypergraph.mli  metacognition.ml  metacognition.mli  reasoning.ml  reasoning.mli  taskscheduler.ml  taskscheduler.mli
test-suite/unit-tests/plugins/cognitiveengine/: dune  dune_simple_test  simple_test.ml  test_cognitiveengine.ml
