(executable
 (public_name test_cognitiveengine)
 (name test_cognitiveengine)
 (package rocq-test-suite)
 (libraries ounit2 rocq-runtime.plugins.cognitiveengine)
 (modules test_cognitiveengine))

(executable
 (public_name simple_test_cognitiveengine)
 (name simple_test)
 (package rocq-test-suite)
 (libraries rocq-runtime.plugins.cognitiveengine)
 (modules simple_test))

(rule
 (alias runtest)
 (deps ./test_cognitiveengine.exe)
 (action (run ./test_cognitiveengine.exe)))

(rule
 (alias runtest-simple)
 (deps ./simple_test.exe)
 (action (run ./simple_test.exe)))
